Update to newest anchor

--- a/.program_client/Cargo.toml
+++ b/.program_client/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-trdelnik-client = "0.3.0"
+trdelnik-client = { git = "https://github.com/reastyn/trdelnik" }
 
 [dependencies.d21]
 path = "../programs/d21"
