--- a/trdelnik-tests/Cargo.toml
+++ b/trdelnik-tests/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dev-dependencies]
 fehler = "1.0.0"
 rstest = "0.12.0"
-trdelnik-client = "0.3.0"
+trdelnik-client = { git = "https://github.com/reastyn/trdelnik" }
 
 [dev-dependencies.program_client]
 path = "../.program_client"
