--- a/.program_client/Cargo.toml
+++ b/.program_client/Cargo.toml
@@ -3,7 +3,8 @@ name = "program_client"
 version = "0.1.0"
 edition = "2018"
 [dependencies.trdelnik-client]
-git = "https://github.com/reastyn/trdelnik"
+path = "../../trdelnik/crates/client"
+version = "0.6.0"
 
 [dependencies.d21]
 path = "../programs/d21"
