--- a/trdelnik-tests/Cargo.toml
+++ b/trdelnik-tests/Cargo.toml
@@ -12,21 +12,10 @@ tokio = "~1.14.1"
 trdelnik-client = { path = "../../trdelnik/crates/client", version = "0.6.0" }
 rand = "0.8.5"
 async-trait = "0.1.68"
+trdelnik-fuzz = { path = "../../trdelnik/crates/fuzz", version = "0.1.0" }
 
 [dependencies.program_client]
 path = "../.program_client"
 
 [dependencies.d21]
 path = "../programs/d21"
-
-[[bin]]
-name = "fuzz_test_1"
-path = "fuzz-tests/fuzz_test_1.rs"
-test = false
-doc = false
-
-[[bin]]
-name = "fuzz_test_2"
-path = "fuzz-tests/fuzz_test_2.rs"
-test = false
-doc = false
